# machine_tools

./: .gitignore  MANIFEST.in  README.md  README_OLD.md  pyproject.toml  setup.cfg  show_sqlite.py
.github/workflows/: python-tests.yml  tests.yml
database_backups/: machine_tools.csv
machine_tools/: .env  01  __init__.py  __main__.py  cli.py  download_from_xls.py  find.py  fun.py  logger_settings.py  version.py
machine_tools/alembic/: env.py
machine_tools/alembic/versions/: 3d26531fb3ac_add_new_column.py
machine_tools/app/: __init__.py  config.py  descriptions.py  formatters.py
machine_tools/app/containers/: __init__.py  finder_container.py
machine_tools/app/db/: __init__.py  check_connection.py  init_db.py  query_builder.py  session_manager.py  show_machines.py  show_technical_requirements.py  show_unique_values.py
machine_tools/app/enumerations/: __init__.py  accuracy.py  automation.py  base.py  software_control.py  specialization.py  weight_class.py
machine_tools/app/fields/: __init__.py  accuracy.py  automation.py  enumeration_field.py  machine_group.py  machine_type.py  specialization.py  weight_class.py
machine_tools/app/finders/: finder.py
machine_tools/app/formatters/: __init__.py  machine_formatters.py
machine_tools/app/models/: __init__.py  machine.py  technical_requirement.py
machine_tools/app/resources/tables_csv/: 1283.csv  1286-6.csv  1325Ф30.csv  1341.csv  1510.csv  1512Ф3.csv  1516Ф3.csv  1531М.csv  1540Ф1.csv  1541.csv  1553.csv  1557.csv  1563Ф1.csv  1600.csv  1600В.csv  1604.csv  1612П.csv  1615-А.csv  1616.csv  1617.csv  1622.csv  165.csv  16Б04П.csv  16Б05П.csv  16Б16.csv  16Б16КП.csv  16Б16Т1.csv  16Б16Ф3.csv  16Б20П.csv  16В20.csv  16Д20.csv  16Е16КП.csv  16Е20.csv  16К20.csv  16К20ВФ1.csv  16К20ПФ1.csv  16К20Т1.02.csv  16К20Т1.csv  16К20Ф1.csv  16К20Ф3С32.csv  (+464 more)
machine_tools/app/schemas/: __init__.py  machine.py
machine_tools/app/services/: __init__.py  finder.py  finder_getters.py  scripts.py
machine_tools/app/updaters/: __init__.py  updater.py  utils.py
machine_tools/examples/: finder_container_example.py
machine_tools/src/: export_to_csv.py  test.py
machine_tools_2/: .env  001  requirements.txt
machine_tools_2/alembic/: env.py
machine_tools_2/app/core/: config.py
machine_tools_2/app/db/: __init__.py  add_test_data.py  base.py  check_data.py  check_tables.py  session.py
machine_tools_2/app/models/: machine.py
machine_tools_2/app/repositories/: machine.py
machine_tools_2/app/schemas/: machine.py
machine_tools_2/app/services/: machine.py
machine_tools_3/: 0002.py  01  __init__.py  alembic.ini  cli.py  migrate_sqlite_to_postgres.py
machine_tools_3/alembic/: env.py
machine_tools_3/alembic/versions/: 7b1eab514f50_create_full_machines_table.py  create_all_tables.py  initial_migration.py
machine_tools_3/app/: __init__.py
machine_tools_3/app/core/: config.py
machine_tools_3/app/db/: __init__.py  check_connection.py  init_db.py  query_builder.py  session.py  session_manager.py  show_machines.py  show_technical_requirements.py
machine_tools_3/app/formatters/: __init__.py  machine_formatters.py
machine_tools_3/app/models/: __init__.py  machine.py  technical_requirement.py
machine_tools_3/app/resources/tables_csv/: 11Т16А.csv  1336М.csv  1340.csv  1365.csv  1425.csv  1508.csv  1512.csv  1512Ф1.csv  1516.csv  1516Ф1.csv  1525.csv  1601.csv  1603.csv  161-А.csv  161-АМ.csv  1612В.csv  1613 Д.csv  1615.csv  1624М.csv  162К(26А).csv  163.csv  1658.csv  1660.csv  16А20Ф3.csv  16А20Ф3С32.csv  16А20Ф3С39.csv  16Б05А.csv  16Б16.csv  16Б16А.csv  16Б16КА.csv  16Б16П.csv  16Б25ПСП.csv  16ВТ20П.csv  16Д16АФ1.csv  16Д25.csv  16К20М.csv  16К20П.csv  16К20Т1.01.csv  16К20Ф3.csv  16К20Ф3С5.csv  (+469 more)
machine_tools_3/app/schemas/: machine.py
machine_tools_3/app/services/: __init__.py  finder.py  get_all_machines.py  get_info_by_accuracy.py  get_info_by_automation.py  get_info_by_efficiency.py  get_info_by_group.py  get_info_by_group_and_type.py  get_info_by_name.py  get_info_by_power.py  get_info_by_specialization.py  get_info_by_type.py  get_unique_values.py
machine_tools_old/: __init__.py  __main__.py  download_from_xls.py  find.py
scripts/: update_version.py
tests/: conftest.py
tests/app/db/: test_query_builder.py  test_session_manager.py
tests/app/enumerations/: test_accuracy.py  test_automation.py  test_software_control.py  test_specialization.py  test_weight_class.py
tests/app/fields/: test_enumeration.py
tests/app/finders/: test_finder.py
tests/app/formatters/: test_machine_formatters.py
tests/app/models/: test_machine.py
tests/app/schemas/: test_machine.py
tests/app/services/: test_finder.py  test_finder_getters.py  test_scripts.py
tests/app/updaters/: test_updater.py  test_utils.py
