[tool.poetry]
name = "machine-tools"
version = "0.2.11"
description = "Пакет для работы с базой данных станков"
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [{include = "machine_tools_3"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
dependency-injector = "^4.41.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
black = "^25.1.0"
isort = "^6.0.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
chardet = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init-machine-tools-db = "machine_tools_3.app.db.init_db:init_db_from_csv"