[metadata]
name = machine_tools
version = 0.2.10
author = Andrey Nikolaevich Korenyuk
author_email = korenyuk.a.n@mail.ru
description = Модуль работы с базой данных станков
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = machine_tools_3
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.0.3
    dependency-injector>=4.41.0
    pydantic>=2.11.3
    service-for-my-projects

[options.packages.find]
where = machine_tools_3
include =
    machine_tools_3
    machine_tools_3.*

[options.entry_points]
console_scripts =
  init-machine-tools-db = machine_tools_3.app.db.init_db:init_db_from_csv
      