[metadata]
name = machine_tools
version = attr: machine_tools.version.__version__
author = Andrey Nikolaevich Korenyuk
author_email = korenyuk.a.n@mail.ru
description = Модуль работы с базой данных станков
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = machine_tools
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.2.3
    dependency-injector>=4.41.0
    pydantic>=2.11.3
    pydantic-settings>=2.9.1
    sqlalchemy>=2.0.40
    alembic>=1.15.2
    psycopg2>=2.9.10
    psycopg2-binary>=2.9.10
    click>=8.1.7
    chardet>=5.2.0

[options.packages.find]
where = machine_tools
include =
    machine_tools
    machine_tools.*

[options.entry_points]
console_scripts =
    machine_tools = machine_tools.cli:main
      